--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
+<>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,26 +28,26 @@
                         <div class="collapse navbar-collapse nav__mobile" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-1">SOBRE O CURSO</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-1">SOBRE O CURSO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-2">INTRODUÇÃO</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-2">INTRODUÇÃO</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-3">2. FUNCIONAMENTO DO
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-3">2. FUNCIONAMENTO DO
                                         MIXER</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-4">3. CANAIS</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-4">3. CANAIS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-5">4. FX SENDS</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-5">4. FX SENDS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-6">5. CANAIS SUB</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-6">5. CANAIS SUB</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="list-group-item list-group-item-action" href="#list-item-7">6. EDIT</a>
+                                    <a class="list-group-item list-group-item-action m-2" href="#list-item-7">6. EDIT</a>
                                 </li>
                             </ul>
                         </div>
